@@ -3,6 +3,7 @@
 * Bugs fixed:
 
   [no-id]  Fix the examples installation for non-doc builds.
+  [no-id]  Fix the spelling of the OCR1A/B registers in ATtinyX4 devices.
   [#15266] Function ldexp incorrectly processes overflow and underflow cases.
 
 *** Changes in avr-libc-1.4.1:
